# evm-parachain

./: Cargo.toml  README.md  cherry_EVM_Testnet_Raw.json  evmMainnet.json  evmTestnet.json  evmTestnetRaw.json
cli-opt/: Cargo.toml
cli-opt/src/: account_key.rs  lib.rs
client/rpc/debug/src/: lib.rs
client/rpc/trace/src/: lib.rs
core-primitives/: Cargo.toml
core-primitives/src/: currency.rs  lib.rs
node/: Cargo.toml
node/cli-opt/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs  tracing.rs
orml/tokens/src/: lib.rs  mock.rs
orml/traits/src/: currency.rs  location.rs  multi_asset.rs
orml/utilities/src/: ordered_set.rs
orml/xcm-support/src/: currency_adapter.rs  lib.rs  tests.rs
orml/xcm/src/: lib.rs
pallets/author-inherent/: Cargo.toml
pallets/author-inherent/src/: benchmarks.rs  exec.rs  lib.rs  mock.rs  tests.rs
pallets/author-slot-filter/: Cargo.toml
pallets/author-slot-filter/src/: benchmarks.rs  lib.rs  migration.rs  mock.rs  num.rs  tests.rs
pallets/template/: Cargo.toml
pallets/xtokens/: Cargo.toml
pallets/xtokens/src/: lib.rs  tests.rs
pallets/xtokens/src/mock/: mod.rs  para.rs  para_relative_view.rs  para_teleport.rs  relay.rs  teleport_currency_adapter.rs
precompiles/balances-erc20/: Cargo.toml
precompiles/batch/: Cargo.toml
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/tests-external/: Cargo.toml
primitives/: Cargo.toml
primitives/account/: Cargo.toml
primitives/account/src/: lib.rs
primitives/currency/: Cargo.toml
primitives/currency/src/: lib.rs
primitives/nimbus-primitives/: Cargo.toml
primitives/nimbus-primitives/src/: digests.rs  inherents.rs  lib.rs
primitives/rpc/debug/: Cargo.toml
primitives/src/: account.rs  currency.rs  lib.rs  location_conversion.rs  origin_conversion.rs
primitives/xcm/: Cargo.toml
primitives/xcm/src/: barriers.rs  ethereum_xcm.rs  fee_handlers.rs  lib.rs  location_conversion.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  precompiles.rs  xcm_config.rs
