[package]
name = "parachain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/PureStake/cumulus/"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.151", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
bip32 = { git = "https://github.com/purestake/crates", branch = "bip32-v0.4.0-fix", default-features = false, features = [ "bip39" ] }
tiny-bip39 = { version = "0.8", default-features = false }
futures = { version = "0.3.1", features = [ "compat" ] }
async-io = "1.3"
maplit = "1.0.2"
libsecp256k1 = { version = "0.7", features = [ "hmac" ] }
sha3 = { version = "0.10", default-features = false }
hex-literal = "0.3.4"
tokio = { version = "1.13.0", features = [ "macros", "sync" ] }
flume = "0.10.9"

# Local
parachain-template-runtime = { path = "../runtime" }
nimbus-primitives = { path = "../primitives/nimbus-primitives", default-features = false }
cli-opt = { path = "../cli-opt" }
moonbeam-rpc-debug = { path = "../client/rpc/debug" }
moonbeam-rpc-trace = { path = "../client/rpc/trace" }
moonbeam-rpc-primitives-debug = { path = "../primitives/rpc/debug" }

# Substrate
frame-benchmarking = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
frame-benchmarking-cli = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
pallet-transaction-payment-rpc = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-basic-authorship = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-chain-spec = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-cli = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-client-api = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-consensus = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-executor = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-network = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-network-common = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-rpc = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-service = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-sysinfo = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-telemetry = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-tracing = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-transaction-pool = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-transaction-pool-api = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-api = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-block-builder = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-blockchain = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-consensus-aura = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-core = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-keystore = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-offchain = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-io = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-session = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-timestamp = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-transaction-pool = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
substrate-frame-rpc-system = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
substrate-prometheus-endpoint = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
try-runtime-cli = { git = "https://github.com/PureStake/substrate", optional = true , branch = "moonbeam-polkadot-v0.9.37" }
sp-trie = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-consensus-manual-seal = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sc-client-db = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }

# Polkadot
polkadot-cli = { git = "https://github.com/PureStake/polkadot", branch = "moonbeam-polkadot-v0.9.37" }
polkadot-primitives = { git = "https://github.com/PureStake/polkadot", branch = "moonbeam-polkadot-v0.9.37" }
polkadot-service = { git = "https://github.com/PureStake/polkadot", branch = "moonbeam-polkadot-v0.9.37" }
xcm = { git = "https://github.com/PureStake/polkadot", default-features = false, branch = "moonbeam-polkadot-v0.9.37" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37" }
cumulus-client-consensus-aura = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37" }
cumulus-client-consensus-common = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37" }
cumulus-client-network = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37" }
cumulus-client-service = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37" }
cumulus-primitives-core = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37" }
cumulus-relay-chain-interface = { git = "https://github.com/PureStake/cumulus.git", branch = "moonbeam-polkadot-v0.9.37" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37" }
nimbus-consensus = { git = "https://github.com/PureStake/nimbus.git", branch = "moonbeam-polkadot-v0.9.37" }

# Frontier
fc-consensus = { git = "https://github.com/PureStake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-evm = { git = "https://github.com/PureStake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-rpc = { git = "https://github.com/PureStake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-rpc = { git = "https://github.com/PureStake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-mapping-sync = { git = "https://github.com/PureStake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-db = { git = "https://github.com/PureStake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-rpc-core = { git = "https://github.com/PureStake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-storage = { git = "https://github.com/PureStake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/PureStake/substrate", branch = "moonbeam-polkadot-v0.9.37" }

[features]
default = []
runtime-benchmarks = [
	"try-runtime-cli/try-runtime",
	"parachain-template-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"parachain-template-runtime/try-runtime"
]
